Создаёт компоненты проекта

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
     <title>Star Wars Wiki</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="container"></div>
   </body>
 </html>
